# bayeso-metrics

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pytest.yml
bayeso_metrics/: __init__.py  metric_average_degree.py  metric_average_distance.py  metric_cumulative_regret.py  metric_instantaneous_regret.py  metric_parameter_free_average_degree.py  metric_parameter_free_average_distance.py  metric_parameter_free_precision.py  metric_parameter_free_recall.py  metric_precision.py  metric_recall.py  metric_simple_regret.py  utils_metrics.py  utils_nearest_neighbors.py  utils_sampling.py
examples/: run_bo.py  visualize_metrics_for_branin.py
tests/: test_import.py  test_version.py
